--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
         "128": "icons/nasapod128x128.png"
     },
     "browser_action": {
-        "default_popup": "popup/popup.html"
+        "default_popup": "popup/popup.js"
     },
     
     "permissions" : 
