--- a/manifest.json
+++ b/manifest.json
@@ -10,10 +10,9 @@
         "48": "icons/nasapod48x48.png",
         "128": "icons/nasapod128x128.png"
     },
-    "browser_action": {
-        "default_popup": "popup/popup.js"
+    "background" : {
+    "scripts" : ["background.js"]
     },
-    
     "permissions" : 
     [
         "tabs"
