--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,9 @@
         "48": "icons/nasapod48x48.png",
         "128": "icons/nasapod128x128.png"
     },
-    "background" : {
-    "scripts" : ["background.js"]
-    },
+    "browser_action": {
+        "default_popup": "popup/popup.js"
+    }
     "permissions" : 
     [
         "tabs"
