--- a/edge/manifest.json
+++ b/edge/manifest.json
@@ -5,10 +5,10 @@
     "manifest_version": 2,
     "description": "A Chromium Extension to open a new tab with the explanified version of a xkcd comic",
     "icons": {
-        "16": "../icons/nasapod16x16.png",
-        "32": "../icons/nasapod32x32.png",
-        "48": "../icons/nasapod48x48.png",
-        "128": "../icons/nasapod128x128.png"
+        "16": "/icons/nasapod16x16.png",
+        "32": "/icons/nasapod32x32.png",
+        "48": "/icons/nasapod48x48.png",
+        "128": "/icons/nasapod128x128.png"
     },
     "browser_action": {
         "default_popup": "popup/popup.html"
