--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,22 +1,20 @@
 {
-    "name": "xkcd Explanifier",
-    "author": "TheUltimateGuide, a Youtube channel",
-    "version": "1.0",
-    "manifest_version": 2,
-    "description": "A Firefox Extension to open a new tab with the explanified version of a xkcd comic",
-    "icons": {
-        "16": "icons/nasapod16x16.png",
-        "32": "icons/nasapod32x32.png",
-        "48": "icons/nasapod48x48.png",
-        "128": "icons/nasapod128x128.png"
-    },
-    "browser_action": {
-        "default_popup": "popup/popup.html"
-    },
-    
-    "permissions" : 
-    [
-        "activeTab"
-    ]
 
+  "manifest_version": 2,
+  "name": "xkcd Explanifier",
+  "version": "1.1",
+  "author": "TheUltimateGuide, a Youtube channel",
+  "description": "A Chromium Extension to open a new tab with the explanified version of a xkcd comic",
+
+  "icons": {
+    "48": "icons/nasapod48x48.png",
+    "96": "icons/nasapod96x96"
+  },
+  "browser_action": {
+      "default_popup":"popup/popup.html"
+  },
+  "permissions": [
+    "<all_urls>",
+    "tabs"
+  ]
 }
