--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -8,7 +8,7 @@
 
   "icons": {
     "48": "icons/nasapod48x48.png",
-    "96": "icons/nasapod96x96"
+    "96": "icons/nasapod96x96.png"
   },
   "browser_action": {
       "default_popup":"popup/popup.html"
