--- a/safari/manifest.json
+++ b/safari/manifest.json
@@ -1,1 +1,21 @@
-{}
+{
+        "manifest_version": 2,
+        "default_locale": "en",
+    
+        "name": "xkcd Explanifier",
+        "author": "TheUltimateGuide, a Youtube channel",
+        "version": "1.1",
+        "homepage_url": "https://github.com/MySixSenses/xkcd-Explainifier",
+    
+        "icons": {
+            "16": "/icons/nasapod16x16.png",
+            "32": "/icons/nasapod32x32.png",
+            "48": "/icons/nasapod48x48.png",
+            "128": "/icons/nasapod128x128.png"
+        },
+
+        "browser_action": {
+            "default_popup": "popup/popup.html"
+        },
+        "permissions": [ "nativeMessaging" ]
+}
